--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raphael DIEZ PECOSTE | Ingénieur Data & IA</title>
     <link rel="icon" type="image/x-icon" href="assets/logo.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
   <div id="header"></div>
@@ -36,7 +37,7 @@
                     </div>
                 </div>
                 <div class="profile-container">
-                    <img src="assets/profile.jpg" alt="Raphaël DIEZ PECOSTE" class="profile-img">
+                    <img src="assets/profile.jpeg" alt="Raphaël DIEZ PECOSTE" class="profile-img">
                 </div>
             </div>
         </div>
@@ -46,17 +47,19 @@
     <section id="skills">
         <div class="container">
             <h2>Compétences</h2>
-                <div class="skill-card"><i class="fab fa-python"></i><h3>Python</h3></div>
-                <div class="skill-card"><i class="fas fa-brain"></i><h3>IA & Machine Learning</h3></div>
-                <div class="skill-card"><i class="fas fa-database"></i><h3>SQL</h3></div>
-                <div class="skill-card"><i class="fas fa-snowflake"></i><h3>Snowflake</h3></div>
-                <div class="skill-card"><i class="fas fa-cube"></i><h3>DBT</h3></div>
-                <div class="skill-card"><i class="fas fa-project-diagram"></i><h3>LangGraph</h3></div>
-                <div class="skill-card"><i class="fab fa-docker"></i><h3>Docker</h3></div>
-                <div class="skill-card"><i class="fab fa-java"></i><h3>Java</h3></div>
-                <div class="skill-card"><i class="fas fa-c"></i><h3>C / C++</h3></div>
-                <div class="skill-card"><i class="fab fa-js"></i><h3>HTML / CSS / JavaScript</h3></div>
-                <div class="skill-card"><i class="fas fa-newspaper-o"></i><h3>Streamlit</h3></div>
+                <div class="skills-grid">
+                    <div class="skill-card"><i class="fab fa-python"></i><h3>Python</h3></div>
+                    <div class="skill-card"><i class="fas fa-brain"></i><h3>IA & Machine Learning</h3></div>
+                    <div class="skill-card"><i class="fas fa-database"></i><h3>SQL</h3></div>
+                    <div class="skill-card"><i class="fas fa-snowflake"></i><h3>Snowflake</h3></div>
+                    <div class="skill-card"><i class="fas fa-cube"></i><h3>DBT</h3></div>
+                    <div class="skill-card"><i class="fas fa-project-diagram"></i><h3>LangGraph</h3></div>
+                    <div class="skill-card"><i class="fab fa-docker"></i><h3>Docker</h3></div>
+                    <div class="skill-card"><i class="fab fa-java"></i><h3>Java</h3></div>
+                    <div class="skill-card"><i class="fas fa-c"></i><h3>C / C++</h3></div>
+                    <div class="skill-card"><i class="fab fa-js"></i><h3>HTML / CSS / JavaScript</h3></div>
+                    <div class="skill-card"><i class="fab fa-html5"></i><h3>Streamlit</h3></div>
+                </div>
             </div>
         </div>
     </section>
@@ -130,10 +133,10 @@
     <section id="projects">
         <div class="container">
             <h2>Projets</h2>
-                <p class="section-intro">
-                 Voici une sélection de projets que j’ai réalisés, illustrant mes compétences en Data Engineering, Intelligence Artificielle et développement logiciel.
-                </p>
-                <div class="projects-grid">
+            <p class="section-intro">
+                Voici une sélection de projets que j’ai réalisés, illustrant mes compétences en Data Engineering, Intelligence Artificielle et développement logiciel.
+            </p>
+            <div class="projects-grid">
                 <div class="project-card">
                     <img src="assets/images/dbt-generator/ui.png" alt="Générateur de projets dbt" loading="lazy" class="project-thumbnail">
                     <div class="project-info">
