responsive content (mobile version)

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2>Expérience</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>Data & AI Engineer</h3>
+                    <h3>► Data & AI Engineer</h3>
                     <p class="company">Eviden / Atos | Pessac, France</p>
                     <p class="date">Avr. 2025 - Sep. 2025</p>
                     <ul>
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
                 <div class="timeline-item">
-                    <h3>Développeur IA</h3>
+                    <h3>► Développeur IA</h3>
                     <p class="company">Maison de l'Intelligence Artificielle | Oujda, Maroc</p>
                     <p class="date">Avr. 2024 - Août 2024</p>
                     <ul>
@@ -90,7 +90,7 @@
                     </ul>
                 </div>
                 <div class="timeline-item">
-                    <h3>Data Scientist</h3>
+                    <h3>► Data Scientist</h3>
                     <p class="company">Communauté d'Agglomération de Pau Béarn | Pau, France</p>
                     <p class="date">Juil. 2023 - Août 2023</p>
                     <ul>
@@ -107,7 +107,7 @@
             <h2>Formation</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>Diplôme d'ingénieur en Mathématiques et Informatique (spécialité IA)</h3>
+                    <h3>► Diplôme d'ingénieur en Mathématiques et Informatique (spécialité IA)</h3>
                     <p class="company">CY Tech (ex EISTI) | Pau, France</p>
                     <p class="date">2022 - 2025</p>
                     <ul>
@@ -116,12 +116,12 @@
                     </ul>
                 </div>
                 <div class="timeline-item">
-                    <h3>Classe Préparatoire aux Grandes Écoles (PCSI - PSI)</h3>
+                    <h3>► Classe Préparatoire aux Grandes Écoles (PCSI - PSI)</h3>
                     <p class="company">Lycée Gustave Eiffel | Bordeaux, France</p>
                     <p class="date">2019 - 2022</p>
                 </div>
                 <div class="timeline-item">
-                    <h3>Baccalauréat Scientifique</h3>
+                    <h3>► Baccalauréat Scientifique</h3>
                     <p class="company">Lycée Serre de Sarsan | Lourdes, France</p>
                     <p class="date">2016 - 2019</p>
                 </div>
@@ -140,7 +140,7 @@
                 <div class="project-card">
                     <img src="assets/images/dbt-generator/ui.png" alt="Générateur de projets dbt" loading="lazy" class="project-thumbnail">
                     <div class="project-info">
-                    <h3><a href="projects/dbt-generator.html">Générateur automatique de projets dbt</a></h3>
+                    <h3>► <a href="projects/dbt-generator.html">Générateur automatique de projets dbt</a></h3>
                     <p>Automatisation de la génération de projets dbt (Snowflake, LangGraph, LLM) avec interface Streamlit.</p>
                     <span class="project-tags">Python · LangGraph · dbt · Streamlit</span>
                     </div>
@@ -149,7 +149,7 @@
                 <div class="project-card">
                     <img src="assets/images/smartbin/prototype.png" alt="SmartBin" loading="lazy" class="project-thumbnail">
                     <div class="project-info">
-                    <h3><a href="projects/smartbin.html">SmartBin</a></h3>
+                    <h3>► <a href="projects/smartbin.html">SmartBin</a></h3>
                     <p>Système de tri sélectif intelligent avec récompenses et base de données intégrée.</p>
                     <span class="project-tags">Java · Base de données</span>
                     </div>
@@ -158,7 +158,7 @@
                 <div class="project-card">
                     <img src="assets/images/debruitage/prototype.png" alt="Débruitage d'images" loading="lazy" class="project-thumbnail">
                     <div class="project-info">
-                    <h3><a href="projects/debruitage.html">Débruitage d'images</a></h3>
+                    <h3>► <a href="projects/debruitage.html">Débruitage d'images</a></h3>
                     <p>Création d’un modèle basé sur l’Analyse en Composantes Principales pour le débruitage d’images.</p>
                     <span class="project-tags">Python</span>
                     </div>
@@ -166,7 +166,7 @@
                 <div class="project-card">
                     <img src="assets/images/lorabearn/dashboard.png" alt="LoRaBéarn" loading="lazy" class="project-thumbnail">
                     <div class="project-info">
-                    <h3><a href="projects/lorabearn.html">LoRaBéarn</a></h3>
+                    <h3>► <a href="projects/lorabearn.html">LoRaBéarn</a></h3>
                     <p>Collecte et visualisation de télémétries IoT via LoRaWAN, avec dashboards automatisés.</p>
                     <span class="project-tags">IoT · LoRaWAN · DataViz</span>
                     </div>
@@ -175,7 +175,7 @@
                 <div class="project-card">
                     <img src="assets/images/chess/board.png" alt="Jeu d’échecs en Python" loading="lazy" class="project-thumbnail">
                     <div class="project-info">
-                    <h3><a href="projects/chess.html">Jeu d’échecs en Python</a></h3>
+                    <h3>► <a href="projects/chess.html">Jeu d’échecs en Python</a></h3>
                     <p>Jeu d’échecs complet dans le terminal, intégrant toutes les règles officielles.</p>
                     <span class="project-tags">Python · OOP</span>
                     </div>
