CSS, HTML and JS linted

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raphael DIEZ PECOSTE | Ingénieur Data & IA</title>
-    <link rel="icon" type="image/x-icon" href="assets/logo.png" />
+    <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
     <link rel="stylesheet" href="../css/variables.css" />
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/header-footer.css" />
@@ -121,7 +121,7 @@
 
           <div class="profile-container">
             <img
-              src="assets/images/profile.jpg"
+              src="assets/img/profile.jpg"
               alt="Raphaël DIEZ PECOSTE"
               class="profile-img"
             />
