--- a/projects/dbt-generator.html
+++ b/projects/dbt-generator.html
@@ -32,7 +32,7 @@
 
     <!-- Contenu principal -->
     <main class="project-detail">
-      <div class="container" style="color: blue">
+      <div class="container">
         <!-- Hero 
       <header class="hero project-hero" >
         <div >
